--- a/src/w1.html
+++ b/src/w1.html
@@ -54,19 +54,19 @@
     <section class="content">
         <h3 class="hidden">프로젝트 이미지</h3>
         <div class="motion">
-            <img src="/static/img/w_c_1.jpg">
+            <img src="./static/img/w_c_1.jpg">
         </div>
         <div class="motion">
-            <img src="/static/img/w_c_2.jpg">
+            <img src="./static/img/w_c_2.jpg">
         </div>
         <div class="motion">
-            <img src="/static/img/w_c_3.jpg">
+            <img src="./static/img/w_c_3.jpg">
         </div>
         <div class="motion">
             <ul>
-                <li><img src="/static/img/w_c_4.jpg"></li>
-                <li><img src="/static/img/w_c_5.jpg"></li>
-                <li><img src="/static/img/w_c_6.jpg"></li>
+                <li><img src="./static/img/w_c_4.jpg"></li>
+                <li><img src="./static/img/w_c_5.jpg"></li>
+                <li><img src="./static/img/w_c_6.jpg"></li>
             </ul>
         </div>
     </section>
