--- a/src/w2.html
+++ b/src/w2.html
@@ -58,22 +58,22 @@
     <section class="content">
         <h3 class="hidden">프로젝트 이미지</h3>
         <div class="motion">
-            <img src="/static/img/k_1.jpg">
+            <img src="./static/img/k_1.jpg">
         </div>
         <div class="motion">
-            <img src="/static/img/k_2.jpg">
+            <img src="./static/img/k_2.jpg">
         </div>
         <div class="motion">
-            <img src="/static/img/k_3.jpg">
+            <img src="./static/img/k_3.jpg">
         </div>
         <div class="motion">
-            <img src="/static/img/k_4.jpg">
+            <img src="./static/img/k_4.jpg">
         </div>
         <div class="motion">
             <ul>
-                <li><img src="/static/img/k_m_1.jpg"></li>
-                <li><img src="/static/img/k_m_2.jpg"></li>
-                <li><img src="/static/img/k_m_3.jpg"></li>
+                <li><img src="./static/img/k_m_1.jpg"></li>
+                <li><img src="./static/img/k_m_2.jpg"></li>
+                <li><img src="./static/img/k_m_3.jpg"></li>
             </ul>
         </div>
     </section>
