--- a/src/w3.html
+++ b/src/w3.html
@@ -50,16 +50,16 @@
          <h3 class="hidden">프로젝트 이미지</h3>
          <div class="motion">
              <ul>
-                 <li><img src="/static/img/shin_1.jpg"></li>
-                 <li><img src="/static/img/shin_2.jpg"></li>
-                 <li><img src="/static/img/shin_3.jpg"></li>
+                 <li><img src="./static/img/shin_1.jpg"></li>
+                 <li><img src="./static/img/shin_2.jpg"></li>
+                 <li><img src="./static/img/shin_3.jpg"></li>
              </ul>
          </div>
          <div class="motion">
              <ul>
-                 <li><img src="/static/img/shin_4.jpg"></li>
-                 <li><img src="/static/img/shin_5.jpg"></li>
-                 <li><img src="/static/img/shin_6.png"></li>
+                 <li><img src="./static/img/shin_4.jpg"></li>
+                 <li><img src="./static/img/shin_5.jpg"></li>
+                 <li><img src="./static/img/shin_6.png"></li>
              </ul>
          </div>
      </section>
