--- a/src/w4.html
+++ b/src/w4.html
@@ -50,16 +50,16 @@
          <h3 class="hidden">프로젝트 이미지</h3>
          <div class="motion">
              <ul>
-                 <li><img src="/static/img/hiot_1.jpg"></li>
-                 <li><img src="/static/img/hiot_2.jpg"></li>
-                 <li><img src="/static/img/hiot_3.jpg"></li>
+                 <li><img src="./static/img/hiot_1.jpg"></li>
+                 <li><img src="./static/img/hiot_2.jpg"></li>
+                 <li><img src="./static/img/hiot_3.jpg"></li>
              </ul>
          </div>
          <div class="motion">
              <ul>
-                 <li><img src="/static/img/hiot_4.jpg"></li>
-                 <li><img src="/static/img/hiot_5.jpg"></li>
-                 <li><img src="/static/img/hiot_6.jpg"></li>
+                 <li><img src="./static/img/hiot_4.jpg"></li>
+                 <li><img src="./static/img/hiot_5.jpg"></li>
+                 <li><img src="./static/img/hiot_6.jpg"></li>
              </ul>
          </div>
      </section>
