--- a/src/w5.html
+++ b/src/w5.html
@@ -53,19 +53,19 @@
     <section class="content">
          <h3 class="hidden">프로젝트 이미지</h3>
          <div class="motion">
-            <img src="/static/img/oera_1.jpg">
+            <img src="./static/img/oera_1.jpg">
         </div>
         <div class="motion">
-            <img src="/static/img/oera_2.jpg">
+            <img src="./static/img/oera_2.jpg">
         </div>
         <div class="motion">
-            <img src="/static/img/oera_3.jpg">
+            <img src="./static/img/oera_3.jpg">
         </div>
         <div class="motion">
             <ul>
-                <li><img src="/static/img/oera_4.jpg"></li>
-                <li><img src="/static/img/oera_5.jpg"></li>
-                <li><img src="/static/img/oera_6.jpg"></li>
+                <li><img src="./static/img/oera_4.jpg"></li>
+                <li><img src="./static/img/oera_5.jpg"></li>
+                <li><img src="./static/img/oera_6.jpg"></li>
             </ul>
         </div>
     </section>
