--- a/src/w1.html
+++ b/src/w1.html
@@ -22,7 +22,7 @@
         </a>    
     </div>
     <section class="head-img">
-       <div class="img-con"><img src="/static/img/classo.png" alt="클라소메인"></div>
+       <div class="img-con"><img src="./static/img/classo.png" alt="클라소메인"></div>
        <h2>classo</h2>
     </section>
     <section class="brief">
