--- a/src/w2.html
+++ b/src/w2.html
@@ -22,7 +22,7 @@
         </a>    
     </div>
     <section class="head-img">
-        <div class="img-con"><img src="/static/img/kukdo.png" alt="국도메인"></div>
+        <div class="img-con"><img src="./static/img/kukdo.png" alt="국도메인"></div>
         <h2>kukdo</h2>
     </section>
     <section class="brief">
