--- a/src/w5.html
+++ b/src/w5.html
@@ -22,7 +22,7 @@
         </a>    
     </div>
     <section class="head-img">
-        <div class="img-con"><img src="/static/img/oera.png" alt="oera메인"></div>
+        <div class="img-con"><img src="./static/img/oera.png" alt="oera메인"></div>
         <h2>oera</h2>
     </section>
     <section class="brief">
