--- a/src/w3.html
+++ b/src/w3.html
@@ -22,7 +22,7 @@
         </a>    
     </div>
     <section class="head-img">
-        <div class="img-con"><img src="/static/img/shinhan.png" alt="신한플러스메인"></div>
+        <div class="img-con"><img src="./static/img/shinhan.png" alt="신한플러스메인"></div>
         <h2>Shinhan<br>Plus</h2>
      </section>
      <section class="brief">
