--- a/src/w4.html
+++ b/src/w4.html
@@ -22,7 +22,7 @@
         </a>    
     </div>
     <section class="head-img">
-        <div class="img-con"><img src="/static/img/hiot.png" alt="hiot메인"></div>
+        <div class="img-con"><img src="./static/img/hiot.png" alt="hiot메인"></div>
         <h2>Hyundai<br>Hiot</h2>
      </section>
      <section class="brief">
