--- a/src/index.html
+++ b/src/index.html
@@ -107,9 +107,9 @@
     <div class="main-con">
         <main class="intro">
             <div class="head-text">
-                <div class="head-text-con">
-                    <div><p>HELLO.</p></div>
-                    <div><p>I AM SEULGI.</p></div>
+                <div class="text-box">
+                    <div><h2>HELLO.</h2></div>
+                    <div><h2>I AM SEULGI.</h2></div>
                 </div>
             </div>
             <div class="side-text">
