--- a/src/w3.html
+++ b/src/w3.html
@@ -59,7 +59,7 @@
              <ul>
                  <li><img src="./static/img/shin_4.jpg"></li>
                  <li><img src="./static/img/shin_5.jpg"></li>
-                 <li><img src="./static/img/shin_6.png"></li>
+                 <li><img src="./static/img/shin_6.jpg"></li>
              </ul>
          </div>
      </section>
