--- a/src/w2.html
+++ b/src/w2.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="주슬기 포폴사이트">
     <meta property="og:image" content="http://jooosg.cafe24.com/image/intro.png">
     <title>JOOSEULGI - kukdo</title>
-    <link rel="shortcut icon"  type="image/x-icon"  href="/static/img/favicon.ico">
+    <link rel="shortcut icon"  type="image/x-icon"  href="./static/img/favicon.ico">
 </head>
 <body>
 <div class="work-page">
