--- a/src/w2.html
+++ b/src/w2.html
@@ -10,12 +10,12 @@
     <meta name="keywords" content="퍼블리셔,프론트엔드">
     <meta property="og:url" content="SSEULGI">
     <meta property="og:description" content="주슬기 포폴사이트">
-    <meta property="og:image" content="http://jooosg.cafe24.com/image/intro.png">
+    <meta property="og:image" content="./static/img/thumb.jpg">
     <title>JOOSEULGI - kukdo</title>
     <link rel="shortcut icon"  type="image/x-icon"  href="./static/img/favicon.ico">
 </head>
 <body>
-<div class="work-page">
+<div class="work-wrap">
     <div class="back">
         <a href="index.html" title="뒤로가기">
             <i class="fas fa-arrow-alt-circle-left"></i>
