--- a/src/index.html
+++ b/src/index.html
@@ -337,7 +337,7 @@
                     <button href="#main" class="submit" onclick="alert('고맙습니다!')">SUBMIT</button>
                 </div>
                 <div class="icon">
-                    <a href="https://github.com/Jooseulgi/Portfolio" title="깃 새창" target="_blank"><i class="fas fa-code-branch"></i></a>
+                    <a href="https://github.com/Jooseulgi/Portfolio-2022" title="깃 새창" target="_blank"><i class="fas fa-code-branch"></i></a>
                     <a href="https://goo.gl/maps/53U1j6eu6veD1EwA8" title="지도 새창" target="_blank"><i class="fas fa-map-marker-alt"></i></a>
                     <p>ⓒ 2022 JSG ALL RIGHTS RESERVED.</p>
                 </div>
